--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -31,7 +31,7 @@
 		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span data-ng-show="authentication.user.roles[0]==='company'"><img data-ng-show="authentication.user.image" src="{{authentication.user.image}}" style="padding-right:5px"><span data-ng-bind="authentication.user.companyUser.companyName"></span></span>
+					<span data-ng-show="authentication.user.roles[0]==='company'"><img src="{{authentication.user.image.src}}" width="{{authentication.user.image.width}}" height="{{authentication.user.image.height}}" style="padding-right:5px"><span data-ng-bind="authentication.user.companyUser.companyName"></span></span>
 					<span data-ng-show="authentication.user.roles[0]==='user'" data-ng-bind="authentication.user.displayName"></span>
 					 <b class="caret"></b>
 				</a>
