--- a/public/modules/offers/views/offer-details.client.view.html
+++ b/public/modules/offers/views/offer-details.client.view.html
@@ -1,3 +1,3 @@
 <section data-ng-controller="OfferDetailsController">
-	<h1 class="col-md-12"></h1>
+	<h1 class="col-md-12 col-md-offset-4"><img src="{{offer.company.image}}" style="margin-right: 5px"/>{{offer.company.companyUser.companyName}}</h1>
 </section>
